Fixing contrast

--- a/itis3135/styles/arrays.css
+++ b/itis3135/styles/arrays.css
@@ -37,3 +37,10 @@ td {
 #results p {
     margin-bottom: 10px;
 }
+
+button {
+    background-color: midnightblue;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+}
